--- a/style.css
+++ b/style.css
@@ -1,13 +1,34 @@
 *{
-	margin:10;
-	padding: 10;
+	margin:5;
+	padding: 5;
 	font-family: Arial Monospace;
 }
 
-header{
-	color: #69173e;
-}
+nav{
+	text-align: center;
+	display: inline;
+}	
+ ul>li{
+ 	display: inline;
+
+ }
+ ul>a{
+ 	color: black;
+ }
 .logo{
-	background-image:url(logo.jpeg);
+	background-image:url(resources/images/logo.jpg);
 	background-size: cover;
+	width: 100%;
+	height: 300px;
+	position: relative;
+
+}
+
+.text{
+   font-size: 22px;
+   text-shadow: 0 0 3px #FF0000;
+   text-decoration: underline;
+   top:70%;
+   padding:0;
+   position: absolute;
 }
