--- a/style.css
+++ b/style.css
@@ -1,20 +1,24 @@
 *{
-	margin:5;
-	padding: 5;
+	margin:2;
+	padding: 2;
 	font-family: Arial Monospace;
 }
 
 nav{
 	text-align: center;
-	display: inline;
+	margin-bottom: 0;
+	background-color: #34373d;
+	
 }	
  ul>li{
  	display: inline;
 
  }
- ul>a{
- 	color: black;
- }
+ li a {
+  color: black;
+  padding: 8px;
+  
+}
 .logo{
 
 	background-image:url(resources/images/logo.jpg);
@@ -33,4 +37,35 @@ nav{
    top:70%;
    padding:0;
    position: absolute;
+}
+
+.about{
+	padding: 20px;
+	
+     word-spacing:0.2em;
+     border:2px solid #0f421f; 
+}
+.about  p{
+	padding-bottom: 5px;
+	line-height: 1.5;
+}
+
+#bold{
+	font-family: helvetica;
+	padding: 10;
+}
+
+iframe{
+ display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+}
+
+footer{
+	background-color: #282433;
+	font-family: monospace;
+	font-weight: 15em;
+    padding:20px;
+    text-align: center;
 }
