--- a/css/links.css
+++ b/css/links.css
@@ -7,7 +7,7 @@ p {
 }
 
 body {
-	background-image: url(../resources/images/blur/grey-tiles.jpg);
+	background-image: url(../resources/images/0271.jpg);
 	background-repeat: repeat;
 	margin-left: 150px;
 	margin-top: 50px;
