--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-h1 {
+tah1 {
     text-shadow: 0 0 20px #FF0000;
 }
 
@@ -7,7 +7,7 @@ p {
 }
 
 body {
-	background-image: url(../resources/images/blur/grey-tiles.jpg);
+	background-image: url(../resources/images/red-octal.jpg);
 	background-repeat: repeat;
 	margin-left: 150px;
 	margin-top: 50px;
