--- a/css/pages.css
+++ b/css/pages.css
@@ -1,15 +1,22 @@
 h1 {
     text-shadow: 0 0 20px #FF0000;
 }
+
 h2 {
   text-shadow: 0 0 20px #FF0000;
 }
-p {
+
+h3 {
+  text-shadow: 0 0 20px #FF0000;
+}
+
+li {
     text-shadow: 2px 1px 1px #000;
 }
 
+
 body {
-	background-image: url(../resources/images/world-map.jpg);
+	background-image: url(../resources/images/blur/world-map.jpg);
 	background-repeat: repeat;
 	margin-left: 150px;
 	margin-top: 50px;
@@ -17,19 +24,10 @@ body {
 	margin-bottom: 20px;
 }
 
-body,td,th {
+body, td, th {
 	color: #FFF;
 	font-family: Verdana, Geneva, sans-serif;
 	font-style: normal;
-}
-.heading-about {
-	font-family: Verdana, Geneva, sans-serif;
-}
-.font-front-page {
-	font-family: Georgia, Times New Roman, Times, serif;
-}
-.front-page-link {
-	font-family: Verdana, Geneva, sans-serif;
 }
 
 A {
