--- a/css/social-distancing.css
+++ b/css/social-distancing.css
@@ -34,18 +34,15 @@ A {
   text-decoration: none;
   text-shadow: 0.5px 1px 5px #000;
   }
-img{
-	width: 60%;
-	height: auto;
-}
-.box-image img{
-	width:45%;
-	height: 200px;
-	margin-top: 10px;
-	margin-bottom: 10px;
 
-.wrapper{
-	margin-bottom: 40px;
-	margin-top: 30px;
-	word-spacing: 0.2em;
+  div{
+  	padding-bottom: 40px;
+  }
+img{
+	display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  border-radius: 20px;
+
 }
