--- a/css/medical.css
+++ b/css/medical.css
@@ -35,14 +35,11 @@ A {
   text-shadow: 0.5px 1px 5px #000;
   }
 img{
-	width: 60%;
-	height: auto;
+	display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
-.box-image img{
-	width:45%;
-	height: 200px;
-	margin-top: 10px;
-	margin-bottom: 10px;
 
 .wrapper{
 	margin-bottom: 40px;
