--- a/css/gallery.css
+++ b/css/gallery.css
@@ -21,7 +21,7 @@ body {
 	margin-left: 150px;
 	margin-top: 50px;
 	margin-right: 150px;
-	margin-bottom: 50px;
+	margin-bottom: 20px;
 }
 
 body, td, th {
@@ -35,21 +35,14 @@ A {
   text-shadow: 0.5px 1px 5px #000;
   }
 
-  #no1{
-  	display: block;
-  margin-left: auto;
-  margin-right: auto;
-
-  }
-.box-image img{
-	display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+.container{
+	display: flex;
+	flex-wrap: wrap;
 }
-
-.wrapper{
-	margin-bottom: 40px;
-	margin-top: 30px;
-	word-spacing: 0.2em;
+.container > div{
+	padding: 10px;
+}
+img{
+   width: auto%
+	height:auto;
 }
