--- a/css/links.css
+++ b/css/links.css
@@ -4,7 +4,7 @@ h1 {
 
 body {
 	background-image: url(../resources/images/0271.jpg);
-	background-repeat: repeat;
+	background-repeat:100% 100%;
 	margin-left: 150px;
 	margin-top: 50px;
 	margin-right: 150px;
