--- a/css/effect-world.css
+++ b/css/effect-world.css
@@ -37,4 +37,26 @@ A {
 img{
 	float: left;
 	margin: 10px;
+	object-fit: cover;
+}
+.buttons a{
+  border: 0;
+    background: none;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    padding:15px 0px;
+    border:4px solid #3498db;
+    width: 200px;
+    border-radius: 2em;
+    outline: none;
+    color: white; 
+    cursor: pointer;
+}
+.buttons a:hover{
+   background: mediumaquamarine;
+   width: 240px;
+    border-color: #26ff00;
+
+   transition: .2s;
 }
