--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,3 +1,6 @@
+*{
+	box-sizing: border-box;
+}
 h1 {
     text-shadow: 0 0 20px #FF0000;
 }
@@ -16,18 +19,21 @@ li {
 
 
 body {
-	background-image: url(../resources/images/blur/world-map.jpg);
-	background-repeat: repeat;
-	margin-left: 150px;
+	background-image: url(../resources/images/world-map.jpg);
+	background-repeat:100% 100%;
+	margin-left: 100px;
 	margin-top: 50px;
-	margin-right: 150px;
+	margin-right: 100px;
 	margin-bottom: 20px;
+	
+     
 }
 
 body, td, th {
 	color: #FFF;
 	font-family: Verdana, Geneva, sans-serif;
 	font-style: normal;
+
 }
 
 A {
@@ -36,13 +42,70 @@ A {
   }
 
 .container{
-	display: flex;
-	flex-wrap: wrap;
+	width:100%;
+	max-width: 120rem;
+	margin:auto;
+	height: 100vh;
+	padding:0 1.5em;
+	margin-bottom: 50px;
 }
-.container > div{
-	padding: 10px;
+.gallery{
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: auto;
+	grid-gap: 1.5rem;
 }
-img{
-   width: auto%
-	height:auto;
+.gallery img{
+	width: 100%;
+	height: 15rem;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	border-radius: .5rem;
+    object-fit:cover;
 }
+
+.buttons a{
+	border: 0;
+    background: none;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    padding:15px 0px;
+    border:4px solid #3498db;
+    width: 200px;
+    border-radius: 2em;
+    outline: none;
+    color: white; 
+    cursor: pointer;
+}
+.buttons a:hover{
+	 background: mediumaquamarine;
+	 width: 240px;
+	  border-color: #26ff00;
+
+	 transition: .2s;
+}
+/*.container{
+	width:100%;
+	height: 100vh;
+}
+.gallery{
+   display: grid;
+   grid-template-columns: repeat(3,minmax(10px,1fr));
+   grid-template-rows: repeat(3,10vw);
+   grid-gap: 16px;
+
+}
+.img{
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+
+
+}
+.img1{
+	
+.img2{
+	grid-column: 2/4;
+	grid-row: 1/3;}*/
