--- a/css/index.css
+++ b/css/index.css
@@ -25,3 +25,24 @@ A {
   text-decoration: none;
   text-shadow: 0.5px 1px 5px #000;
   }
+.buttons a{
+  border: 0;
+    background: none;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    padding:15px 0px;
+    border:4px solid #3498db;
+    width: 200px;
+    border-radius: 2em;
+    outline: none;
+    color: white; 
+    cursor: pointer;
+}
+.buttons a:hover{
+   background: mediumaquamarine;
+   width: 240px;
+    border-color: #26ff00;
+
+   transition: .2s;
+}
