--- a/css/medical.css
+++ b/css/medical.css
@@ -45,6 +45,8 @@ A {
 	display: block;
   margin-left: auto;
   margin-right: auto;
+  object-fit: cover;
+  
   width: 50%;
 }
 
@@ -52,4 +54,26 @@ A {
 	margin-bottom: 40px;
 	margin-top: 30px;
 	word-spacing: 0.2em;
+}
+
+.buttons a{
+  border: 0;
+    background: none;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    padding:15px 0px;
+    border:4px solid #3498db;
+    width: 200px;
+    border-radius: 2em;
+    outline: none;
+    color: white; 
+    cursor: pointer;
+}
+.buttons a:hover{
+   background: mediumaquamarine;
+   width: 240px;
+    border-color: #26ff00;
+
+   transition: .2s;
 }
