--- a/css/gallery.css
+++ b/css/gallery.css
@@ -53,7 +53,7 @@ A {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-template-rows: auto;
-	grid-gap: 1.5rem;
+	grid-gap: 0.2rem;
 }
 .gallery img{
 	width: 100%;
@@ -64,6 +64,31 @@ A {
 	border-radius: .5rem;
     object-fit:cover;
 }
+.img2{
+ grid-column: 2/4;
+}
+.img9{
+	grid-column: 1/3;
+	grid-row: 4/6;
+
+}
+@media(max-width: 500px){
+	.gallery {
+		display: block;
+	 margin-left: auto;
+     margin-right: auto;
+      width: 100%;
+      
+}
+body{
+	margin-left: 20px;
+	margin-right: 20px;
+}
+img{
+	margin-bottom: 8px;
+	}
+}
+
 
 .buttons a{
 	border: 0;
