--- a/css/index.css
+++ b/css/index.css
@@ -15,34 +15,37 @@ body {
 	margin-bottom: 20px;
 }
 
-body,td,th {
+
+
+body,{
 	color: #FFF;
 	font-family: Verdana, Geneva, sans-serif;
 	font-style: normal;
 }
 
-A {
-  text-decoration: none;
-  text-shadow: 0.5px 1px 5px #000;
-  }
-.buttons a{
-  border: 0;
-    background: none;
-    display: block;
-    margin: 20px auto;
-    text-align: center;
-    padding:15px 0px;
-    border:4px solid #3498db;
-    width: 200px;
-    border-radius: 2em;
-    outline: none;
-    color: white; 
-    cursor: pointer;
-}
-.buttons a:hover{
-   background: mediumaquamarine;
-   width: 240px;
-    border-color: #26ff00;
 
-   transition: .2s;
+.click a{
+  padding: 10px 35px;
+  background-color: #000000;
+  border:2px red solid;
+  text-shadow: 0.5px 1px 5px #000;
+  text-decoration: none;
+   box-shadow: 0 0 8px #FF0000;
+  
+
+  position: absolute;
+  left: 45%;
+  margin-left: -30px;
+  margin-bottom: 50px;
+  
+  
+
+
 }
+.click a:hover{
+  text-decoration: underline;
+  font-size:20px;
+  transition: .2s;
+ 
+}
+
